install cinder theme

--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,9 @@ language: python
 python:
   - "3.5"
 script: true
-install: "pip install mkdocs"
+install:
+  - "pip install mkdocs"
+  - "pip install mkdocs-cinder"
 after_success:
   - if [[ $TRAVIS_BRANCH == 'master' && $TRAVIS_PULL_REQUEST == 'false' ]]; then ./.deploy.sh ; fi
 env:
