--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,10 +1,16 @@
 site_name: ERC spec
+site_description: Executable Research Compendium Specification
+site_author: "Daniel Nüst, Matthias Schutzeichel, Markus Konkol"
 pages:
   - Home: index.md
-  - Specification: spec/index.md
+  - ERC:
+    - Specification: spec/index.md
+    - BagIt Extension: spec/bagit.md
+    - R Extension: spec/r.md
   - User guide: user-guide/index.md
   - Developer guide: dev-guide/index.md
-theme: cinder # readthedocs # flatly, cinder
+  - Glossary: glossary.md
+theme: cinder # readthedocs # flatly
 site_author: o2r project
 site_description: "Executable Research Compendium specification, user guide and developer guide"
 site_dir: site
