--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -5,9 +5,11 @@ pages:
   - Home: index.md
   - ERC:
     - Specification: spec/index.md
+    - Docker Runtime Extension: spec/docker.md
     - Archival Extension: spec/archival.md
     - R Extension: spec/r.md
     - Manipulation Extension: spec/man.md
+    - Plain R Runtime Extension: spec/plain_r.md
   - User guide: user-guide/index.md
   - Developer guide: dev-guide/index.md
   - Glossary: glossary.md
