change theme, add extensions

--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ python:
 script: true
 install:
   - "pip install mkdocs"
-  - "pip install mkdocs-cinder"
+  - "pip install pymdown-extensions"
 after_success:
   - if [[ $TRAVIS_BRANCH == 'master' && $TRAVIS_PULL_REQUEST == 'false' ]]; then ./.deploy.sh ; fi
 env:
