--- a/.travis.yml
+++ b/.travis.yml
@@ -12,6 +12,9 @@ addons:
       - texlive-fonts-recommended
       - texlive-latex-recommended
       - texlive-xetex
+      - tlmgr
+before_install:
+  - tlmgr install xcolor # https://github.com/travis-ci/travis-ci/issues/7863
 install:
   - pip install mkdocs
   - pip install pymdown-extensions
