--- a/.travis.yml
+++ b/.travis.yml
@@ -1,24 +1,25 @@
-language: python
-python:
-  - "3.5"
+language: R # https://github.com/jgm/pandoc/wiki/Using-pandoc-in-Travis-CI
+#python:
+#  - "3.5"
 script: true
-addons:
-  apt:
-    packages:
-      - fonts-lmodern
-      - lmodern pandoc
-      - texlive-full
-      - texlive-latex-extra
-      - texlive-fonts-recommended
-      - texlive-latex-recommended
-      - texlive-xetex
-before_install:
-  - tlmgr install xcolor # https://github.com/travis-ci/travis-ci/issues/7863
+#cache:
+#    - apt
+#addons:
+#  apt:
+#    packages:
+#      - fonts-lmodern
+#      - lmodern pandoc
+#      - texlive-base
+#      - texlive-latex-extra
+#      - texlive-fonts-recommended
+#      - texlive-latex-recommended
+#      - texlive-xetex
+#before_install:
+#  - tlmgr install xcolor # https://github.com/travis-ci/travis-ci/issues/7863
 install:
   - pip install mkdocs
   - pip install pymdown-extensions
   - pip install mkdocs-pandoc
-  # https://github.com/jgm/pandoc/wiki/Using-pandoc-in-Travis-CI
   - pip install pandoc-latex-admonition
 after_success:
   - make pdf_travis
