--- a/.travis.yml
+++ b/.travis.yml
@@ -15,8 +15,8 @@ script: true
 #      - texlive-fonts-recommended
 #      - texlive-latex-recommended
 #      - texlive-xetex
-#before_install:
-#  - tlmgr install xcolor # https://github.com/travis-ci/travis-ci/issues/7863
+before_install:
+  - tlmgr install xcolor mdframed # https://github.com/travis-ci/travis-ci/issues/7863
 install:
   #- pip install pyopenssl ndg-httpsclient pyasn1 # https://stackoverflow.com/a/29202163
   - pip install mkdocs --user
