--- a/.travis.yml
+++ b/.travis.yml
@@ -3,9 +3,11 @@ sudo: false
 script: true
 before_install:
   - shopt -s expand_aliases
+  - pyenv versions
+  - pyenv global 3.5.3
   - tlmgr install xcolor mdframed needspace # https://github.com/travis-ci/travis-ci/issues/7863
-  - alias pip=pip3.5
-  - alias python=python3.5
+  #- alias pip=pip3.5
+  #- alias python=python3.5
   - pip install --upgrade pip
 install:
   - pip install mkdocs --user
