--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,4 +1,4 @@
-site_name: "Executable Reserach Compendium (ERC) Specification"
+site_name: "Executable Research Compendium (ERC) Specification"
 site_author: "Daniel Nüst, Marc Schutzeichel, Markus Konkol"
 site_description: "Executable Research Compendium technical specification, user guides, developer guides, and support."
 copyright: "Licensed under Creative Commons CC0 1.0 Universal License."
